--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ Pygments==2.16.1
 PyPDF2==3.0.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
+python-pptx
 pytz==2023.3.post1
 referencing==0.30.2
 requests==2.31.0
