--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-pptx
 python-docx
+pytesseract
 pytz==2023.3.post1
 referencing==0.30.2
 requests==2.31.0
